feat: CUBRID 지원 추가 및 버그 수정, 문서 업데이트
- CUBRID 호환성을 위한 CubridDialect 추가 (Sequence 지원)
- 엔티티 ID 생성 전략을 IDENTITY에서 SEQUENCE로 변경
- RefreshToken UUID 매핑 문제 수정 (@JdbcTypeCode 적용)
- CUBRID용 DDL 스크립트(schema.sql) 추가
- application.yml 설정 변경 (CUBRID 프로필, 초기화 모드 never)
- 운영 가이드(OPERATION_GUIDE.md) 생성 및 문서 업데이트 (README, DATABASE, HISTORY)
- .gitignore에 nohup.out 추가

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -22,6 +22,13 @@
         <jjwt.version>0.12.3</jjwt.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>cubrid</id>
+            <url>https://maven.cubrid.org</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- Spring Boot Starters -->
         <dependency>
@@ -74,6 +81,12 @@
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>cubrid</groupId>
+            <artifactId>cubrid-jdbc</artifactId>
+            <version>11.0.14.0388</version>
             <scope>runtime</scope>
         </dependency>
 
