feat: CSV 일괄 등록 기능 구현 및 백엔드/UI 오류 수정
- 백엔드 CSV 일괄 등록 API 및 서비스 구현
- 프론트엔드 CsvUploadModal 컴포넌트 추가 (표준 CSS 적용)
- OrganizationResponse DTO 도입으로 LazyInitializationException 해결
- HISTORY_20251204.md 업데이트

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -108,6 +108,13 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- CSV Processing -->
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>5.9</version>
+        </dependency>
     </dependencies>
 
     <build>
