--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -159,10 +159,12 @@ spring:
         format_sql: false
         dialect: org.hibernate.dialect.H2Dialect
   
-  # 데이터 초기화 방지
+  # SQL 초기화 설정
   sql:
     init:
-      mode: never
+      mode: always  # SQL 스크립트 실행 활성화
+      continue-on-error: true  # 이미 컬럼이 있으면 무시
+      schema-locations: classpath:migration_20251211_soft_delete_h2.sql
   
   # H2 콘솔 비활성화 (보안)
   h2:
